--- a/.env.EXAMPLE
+++ b/.env.EXAMPLE
@@ -1,17 +1,7 @@
-
-USER_AGENT=''
-CLIENT_ID=''
-CLIENT_SECRET=''
-REDDIT_USER=''
-REDDIT_PASS=''
-MASTER_SUB='Bwz3rBot'
-SUBREDDITS='Bwz3rBot, IntWatch, AnotherBotFarm'
-DEBUG_CODE='false'
+USER_AGENT='SnootyScraper'
+CLIENT_ID='*****'
+CLIENT_SECRET='*****'
+REDDIT_USER='SnootyScraper'
+REDDIT_PASS='*****'
 DEBUG_NETWORK='false'
-STARTUP_LIMIT='7'
-NANNY_USER="bwz3r"
-SUBMISSION_LIMIT='50'
-USER_SUBMISSION_LIMIT='25'
-MENTIONS_LIMIT='50'
-COMMAND_PREFIX="!"
-THREAD_ID=''
+DELETE_USER='SnootyScraper'
